Effettuato header con anche CSS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <!-- Inizio Header-->
-    <header></header>
+    <header class="text-center">
+        <img id="immagineprofilo" src="profile.png" alt="">
+        <h1>Pallino Pinco - Web Developer</h1>
+        
+    </header>
+    
     <!-- Fine Header-->
     <!-- Inizio Main-->
     <main>
@@ -25,7 +30,7 @@
     </main>
     <!-- Fine Main-->
     <!-- Inizio Footer-->
-    <footer></footer>
+    <footer class="text-center" ></footer>
     <!-- Fine Footer-->
 </body>
 </html>
