Creata sezione Main con anche CSS

--- a/index.html
+++ b/index.html
@@ -1,36 +1,67 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curriculum Vitae</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- Inizio Header-->
     <header class="text-center">
-        <img id="immagineprofilo" src="profile.png" alt="">
-        <h1>Pallino Pinco - Web Developer</h1>
-        
+      <img id="immagineprofilo" src="profile.png" alt="" />
+      <h1>Pallino Pinco - Web Developer</h1>
     </header>
-    
+
     <!-- Fine Header-->
     <!-- Inizio Main-->
     <main>
-        <!-- Inizio sezione esperienze-->
-        <section></section>
-        <!-- Fine sezione esperienze-->
-        <!-- Inzio sezione educazione-->
-        <section></section>
-        <!-- Fine sezione educazione-->
-        <!-- Inizio sezione interessi-->
-        <section></section>
-        <!-- Fine sezione interessi-->
+      <!-- Inizio sezione esperienze-->
+      <section>
+        <h2>Experience</h2>
+        <h3>Evil mega Corp 1</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum eos
+          ipsum <strong>doloribus debitis dolorum inventore</strong> nesciunt
+          provident. Autem tempore, ex eaque in suscipit error facere, quis
+          porro possimus ullam molestias?
+        </p>
+        <h3>Evil mega Corp 2</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, modi ad
+          aut explicabo quibusdam, animi laborum id nemo ullam eveniet quia
+          doloribus vel ex debitis ea veritatis, accusantium ipsam adipisci?
+        </p>
+      </section>
+      <!-- Fine sezione esperienze-->
+      <!-- Inzio sezione educazione-->
+      <section>
+        <h2>Education</h2>
+        <h3>University of Live</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia odit
+          officia quo corrupti beatae eaque omnis atque quaerat voluptate
+          delectus vel neque impedit assumenda cumque quam est, tenetur
+          doloremque dignissimos!
+        </p>
+      </section>
+      <!-- Fine sezione educazione-->
+      <!-- Inizio sezione interessi-->
+      <section>
+        <h2>Interests</h2>
+        <h3>Coding</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum vitae
+          ullam velit sapiente quidem quia amet dicta aperiam, doloribus
+          consequatur sit facilis magni sed odio omnis nam ducimus modi autem?
+        </p>
+      </section>
+      <!-- Fine sezione interessi-->
     </main>
     <!-- Fine Main-->
     <!-- Inizio Footer-->
-    <footer class="text-center" ></footer>
+    <footer class="text-center"></footer>
     <!-- Fine Footer-->
-</body>
+  </body>
 </html>
