Terminato footer e completato il lavoro

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
     </main>
     <!-- Fine Main-->
     <!-- Inizio Footer-->
-    <footer class="text-center"></footer>
+    <footer class="text-center">
+        <p>Made with&hearts; by me</p>
+    </footer>
     <!-- Fine Footer-->
   </body>
 </html>
